--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
-      <h1>Steph's Sweet Shoppe</h1>
+      <h1>Cupcake Ipsum</h1>
     </header>
     <nav aria-label="Main Navigation">
       <ul>
@@ -33,75 +34,8 @@
         <li><a href="#">Order</a></li>
       </ul>
     </nav>
-    <main>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-      <p>
-        Marzipan soufflé cotton candy tart sweet bonbon. Macaroon fruitcake pie
-        gummies gummi bears biscuit dragée. Topping icing marshmallow. Soufflé
-        gummies dessert jelly dessert liquorice.
-      </p>
-    </main>
     <footer>
-      <p>&copy; Steph's Sweet Shoppe</p>
+      <p>&copy; Cupcake Ipsum</p>
     </footer>
   </body>
 </html>
